--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,6 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -18,7 +17,13 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-session": "^1.19.0",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.13",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.17.2"
   }
 }
